--- a/Resomar/WebContent/View/home/home.css
+++ b/Resomar/WebContent/View/home/home.css
@@ -401,8 +401,8 @@ html { height: 100%;}
 }
 
 .card-header {
-    background-color: #212529;
-    color: #bdbdbd;
+    background-color: #1E3B2F;
+    color: #85793C;
 }
 
 .fa-plus-circle {
