--- a/Resomar/WebContent/View/login/login.css
+++ b/Resomar/WebContent/View/login/login.css
@@ -1,14 +1,8 @@
 
 .login-block {
-background: #DE6262;
-/* fallback for old browsers */
-background: -webkit-linear-gradient(to bottom, #FFB88C, #DE6262);
-/* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to bottom, #9194d1, #edb1ab);
-/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 float: left;
 width: 100%;
-padding: 25px 0;
+padding: 8% 0;
 }
 .banner-sec {
 background-size: cover;
@@ -39,8 +33,9 @@ left: 5%;
 }
 
 .login-sec {
-padding: 50px 30px;
-position: relative;
+	padding: 50px 30px;
+	position: relative;
+	color: #1E3B2F !important;
 }
 
 .login-sec .copy-text {
@@ -63,14 +58,14 @@ color: #E36262;
 margin-bottom: 30px;
 font-weight: 800;
 font-size: 30px;
-color: #DE6262;
+color: #1E3B2F;
 }
 
 .login-sec h2:after {
 content: " ";
 width: 100px;
 height: 5px;
-background: #FEB58A;
+background: #85793C;
 display: block;
 margin-top: 20px;
 border-radius: 3px;
@@ -79,7 +74,7 @@ margin-right: auto
 }
 
 .btn-login {
-background: #DE6262;
+background: #1E3B2F;
 color: #fff;
 font-weight: 600;
 }
@@ -91,20 +86,34 @@ padding-left: 345px;
 }
 
 .banner-text h2 {
-color: #fff;
-font-weight: 600;
+	color: #85793C;
+	font-weight: 600;
 }
 
 .banner-text h2:after {
 content: " ";
 width: 100px;
 height: 5px;
-background: #FFF;
+background: #85793C;
 display: block;
 margin-top: 20px;
 border-radius: 3px;
 }
 
 .banner-text p {
-color: #fff;
+color: white;
+}
+
+.btnParticipation {
+	margin-right: 10px;
+	background: #85793C !important;
+}
+
+body {
+	background: linear-gradient(to bottom, #1E3B2F, #85793C) !important;
+	background-repeat: no-repeat !important;
+}
+
+.d-block {
+	width: 110% !important;
 }
