--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -3,7 +3,7 @@
         <nav class="sidebar-wrapper" id="sidebar">
             <div class="sidebar-content">
                 <div class="sidebar-brand">
-                    <a href="#">ReSomar</a>
+                    <a href="#"><span>ReSomar</span></a>
                 </div>
                 <div class="sidebar-header">
                     <div class="user-info">
@@ -16,62 +16,63 @@
                 <div class="sidebar-menu">
                     <ul>
                         <li class="header-menu">
-                            <span>Geral</span>
+                            <span class="item-menu">Geral</span>
                         </li>
                         <li class="sidebar-dropdown">
                             <a href="#">
                                 <i class="fa fa-home"></i>
-                                <span>Início</span>
+                                <span class="item-menu">Início</span>
                             </a>
                         <li class="sidebar-dropdown" ng-init="showCadastro = false"
                             ng-click="showCadastro = !showCadastro">
                             <a href="#">
                                 <i class="fas fa-plus-square"></i>
-                                <span>Cadastros</span><i class="fas fa-angle-down"></i>
+                                <span class="item-menu">Cadastros</span>
+                                <i class="fas fa-angle-down"></i>
                             </a>
-                        </li>
+                    </li>
                         <div class="sidebar-submenu" ng-if="showCadastro">
                             <ul>
                                 <li>
                                     <a href="#">
                                         <i class="fas fa-hospital"></i>
-                                        <span>Clínicas</span>
+                                        <span class="item-menu">Clínicas</span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
                                         <i class="fas fa-donate"></i>
-                                        <Span>Doações</Span>
+                                        <Span class="item-menu">Doações</Span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
                                         <i class="fas fa-graduation-cap"></i>
-                                        <span>Especialidades</span>
+                                        <span class="item-menu">Especialidades</span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
                                         <i class="fas fa-building"></i>
-                                        <span>Instituições</span>
+                                        <span class="item-menu">Instituições</span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
                                         <i class="fas fa-user-md"></i>
-                                        <span>Médicos</span>
+                                        <span class="item-menu">Médicos</span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
                                         <i class="fas fa-hands"></i>
-                                        <span>Necessidades</span>
+                                        <span class="item-menu">Necessidades</span>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
                                         <i class="fas fa-user-injured"></i>
-                                        <span>Pacientes</span>
+                                        <span class="item-menu">Pacientes</span>
                                     </a>
                                 </li>
                             </ul>
@@ -80,19 +81,19 @@
                         <li class="sidebar-dropdown">
                             <a href="#">
                                 <i class="fas fa-ticket-alt"></i>
-                                <span>Vouchers</span>
+                                <span class="item-menu">Vouchers</span>
                             </a>
                         </li>
                         <li class="sidebar-dropdown">
                             <a href="#">
                                 <i class="fas fa-paste"></i>
-                                <span>Relatórios</span>
+                                <span class="item-menu">Relatórios</span>
                             </a>
                         </li>
                         <li class="sidebar-dropdown">
                             <a href="#">
                                 <i class="fa fa-cog"></i>
-                                <span>Configurações</span>
+                                <span class="item-menu">Configurações</span>
                             </a>
                         </li>
                     </ul>
@@ -100,7 +101,6 @@
             </div>
             <!-- sidebar-content  -->
             <div class="sidebar-footer">
-
                 </a>
                 <a href="#">
                     <i title="Sair" class="fa fa-power-off"></i>
