--- a/Resomar/WebContent/View/login/login.html
+++ b/Resomar/WebContent/View/login/login.html
@@ -14,7 +14,7 @@
                 <form class="login-form" name="formLogin">
                     <div class="form-group">
                         <label for="userName" class="text-uppercase">Nome de Usuário</label>
-                        <input type="text" class="form-control" id="userName" ng-model="fieldUserName" placeholder=""
+                        <input type="text" class="form-control" id="userName" ng-model="loginCtrl.userName" placeholder=""
                                name="userName" required>
                         <span class="help-block" ng-show="formLogin.userName.$error.required">
               <ul>
@@ -27,7 +27,7 @@
 
                     <div class="form-group">
                         <label for="exampleInputPassword1" class="text-uppercase">Senha</label>
-                        <input type="password" class="form-control" ng-model="fieldPassword" placeholder=""
+                        <input type="password" class="form-control" ng-model="loginCtrl.password" placeholder=""
                                name="password" required>
                         <span class="help-block" ng-show="formLogin.password.$error.required">
                <ul>
@@ -38,7 +38,7 @@
              </span>
                     </div>
                     <div class="form-check">
-                        <button type="submit" class="btn btn-login float-right">Entrar</button>
+                        <button type="submit" class="btn btn-login float-right" ng-click="loginCtrl.validateLogin();">Entrar</button>
 
                         <button type="button" class="btn btn-login float-right btnParticipation">Quero Participar
                         </button>
