--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="templates/menu/menu.css"/>
 <div class="menu-sidebar">
     <div class="page-wrapper chiller-theme">
         <nav class="sidebar-wrapper" id="sidebar">
