--- a/Resomar/WebContent/View/donate/donate.css
+++ b/Resomar/WebContent/View/donate/donate.css
@@ -1,4 +1,4 @@
-.specialty-register {
+.donate-register {
     float: right;
     width: 102%;
 }
@@ -9,7 +9,7 @@
     margin-right: 1.5%;
 }
 
-.specialty-form {
+.donate-form {
     padding: 30px !important;
 }
 
