--- a/Resomar/WebContent/View/home/home.html
+++ b/Resomar/WebContent/View/home/home.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="View/home/home.css"/>
 <div class="dashboard">
     <div class="card fast-acess bg-light" style="max-width: 73rem;">
         <h4 class="card-header">Acesso Rápido</h4>
