--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -19,7 +19,7 @@
                             <span class="item-menu">Geral</span>
                         </li>
                         <li class="sidebar-dropdown">
-                            <a href="#">
+                            <a href="#/">
                                 <i class="fa fa-home"></i>
                                 <span class="item-menu">Início</span>
                             </a>
@@ -34,7 +34,7 @@
                         <div class="sidebar-submenu" ng-if="showCadastro">
                             <ul>
                                 <li>
-                                    <a href="#">
+                                    <a href="#/clinic">
                                         <i class="fas fa-hospital"></i>
                                         <span class="item-menu">Clínicas</span>
                                     </a>
