--- a/Resomar/WebContent/View/clinic/clinic.html
+++ b/Resomar/WebContent/View/clinic/clinic.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="View/clinic/clinic.css"/>
 <div class="clinic-register">
-    <div class="card fast-acess bg-light" style="max-width: 73rem;">
+    <div class="card fast-acess bg-light">
         <h4 class="card-header">Cadastro de Clínica
         <a href="#" title="Minimizar"><i class="fas fa-window-minimize"></i></a>
         </h4>
