--- a/Resomar/WebContent/View/donate/donate.html
+++ b/Resomar/WebContent/View/donate/donate.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="View/donate/donate.css"/>
 <div class="donate-register">
-    <div class="card fast-acess bg-light" style="max-width: 73rem;">
+    <div class="card fast-acess bg-light">
         <h4 class="card-header">Cadastro de Doações
             <a href="#" title="Minimizar"><i class="fas fa-window-minimize"></i></a>
         </h4>
