--- a/Resomar/WebContent/View/institution/institution.css
+++ b/Resomar/WebContent/View/institution/institution.css
@@ -1,6 +1,8 @@
 .institution-register {
     float: right;
-    width: 102%;
+    margin-right: 4%;
+    margin-right: 2%;
+    width: 99.7%;
 }
 
 .fast-acess {
