--- a/Resomar/WebContent/View/medic/medic.css
+++ b/Resomar/WebContent/View/medic/medic.css
@@ -1,6 +1,8 @@
 .medic-register {
     float: right;
-    width: 102%;
+    margin-right: 3.5%;
+    margin-right: 2%;
+    width: 99.7%;
 }
 
 .fast-acess {
