--- a/Resomar/WebContent/View/medic/medic.html
+++ b/Resomar/WebContent/View/medic/medic.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="View/medic/medic.css"/>
-<div class="medic-register-">
-    <div class="card fast-acess bg-light" style="max-width: 73rem;">
+<div class="medic-register">
+    <div class="card fast-acess bg-light">
         <h4 class="card-header">Cadastro de Médico
             <a href="#" title="Minimizar"><i class="fas fa-window-minimize"></i></a>
         </h4>
