--- a/Resomar/WebContent/View/needs/needs.html
+++ b/Resomar/WebContent/View/needs/needs.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="View/needs/needs.css"/>
-<div class="needs-register-">
-    <div class="card fast-acess bg-light" style="max-width: 73rem;">
+<div class="needs-register">
+    <div class="card fast-acess bg-light">
         <h4 class="card-header">Cadastro de Necessidades
             <a href="#" title="Minimizar"><i class="fas fa-window-minimize"></i></a>
         </h4>
@@ -25,7 +25,7 @@
                 <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
                     <textarea type="text" id="necessidade" name="necessidade" class="form-control" placeholder="Observações"></textarea>
                 </label>
-                <div class="col-md-12" style="text-align: right">
+                <div class="buttons col-md-12" style="text-align: right">
                     <button type="button" class="btn btn-cancel">Cancelar</button>
                     <button type="button" class="btn btn-save">Cadastrar</button>
                 </div>
