--- a/Resomar/WebContent/View/clinic/clinic.css
+++ b/Resomar/WebContent/View/clinic/clinic.css
@@ -1,12 +1,8 @@
 .clinic-register {
     float: right;
-    width: 102%;
-}
-
-.fast-acess {
-    margin-left: 22%;
-    margin-top: 2%;
-    margin-right: 1.5%;
+    margin-top: 30px;
+    width: 76.2%;
+    margin-right: 3.5%;
 }
 
 .clinic-form {
