--- a/Resomar/WebContent/View/institution/institution.html
+++ b/Resomar/WebContent/View/institution/institution.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="View/institution/institution.css"/>
-<div class="institution-register-">
-    <div class="card fast-acess bg-light" style="max-width: 73rem;">
+<div class="institution-register">
+    <div class="card fast-acess bg-light">
         <h4 class="card-header">Cadastro de ONG
             <a href="#" title="Minimizar"><i class="fas fa-window-minimize"></i></a>
         </h4>
@@ -65,9 +65,9 @@
                     Juventude</label>
                 <label class="checkbox-inline col-sm-4 col-lg-4 col-xl-4 col-md-4"><input type="checkbox" value="">
                     Mobilização Interna</label>
-                <div class="col-md-12" style="text-align: right">
+                <div class="buttons col-md-12" style="text-align: right">
                     <button type="button" class="btn btn-cancel">Cancelar</button>
-                    <button type="button" class="btn btn-save>Cadastrar</button>
+                    <button type="button" class="btn btn-save">Cadastrar</button>
                 </div>
             </div>
         </form>
