--- a/Resomar/WebContent/View/patient/patient.html
+++ b/Resomar/WebContent/View/patient/patient.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="View/patient/patient.css"/>
-<div class="patient-register-">
-    <div class="card fast-acess bg-light" style="max-width: 73rem;">
+<div class="patient-register">
+    <div class="card fast-acess bg-light">
         <h4 class="card-header">Cadastro de Paciente
             <a href="#" title="Minimizar"><i class="fas fa-window-minimize"></i></a>
         </h4>
