--- a/Resomar/WebContent/View/specialty/specialty.html
+++ b/Resomar/WebContent/View/specialty/specialty.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="View/specialty/specialty.css"/>
-<div class="specialty-register-">
-    <div class="card fast-acess bg-light" style="max-width: 73rem;">
+<div class="specialty-register">
+    <div class="card fast-acess bg-light">
         <h4 class="card-header">Cadastro de Especialidade
             <a href="#" title="Minimizar"><i class="fas fa-window-minimize"></i></a>
         </h4>
