--- a/Resomar/WebContent/View/login/login.css
+++ b/Resomar/WebContent/View/login/login.css
@@ -27,6 +27,10 @@ div.col-md-8.banner-sec {
 	padding-right: 0 !important;
 }
 
+.form-check {
+	margin-top: 10px;
+}
+
 .carousel-caption {
 text-align: left;
 left: 5%;
