--- a/Resomar/WebContent/View/home/home.css
+++ b/Resomar/WebContent/View/home/home.css
@@ -440,3 +440,41 @@ html { height: 100%;}
     float: right;
     width: 102%;
 }
+
+.fa-window-minimize {
+    float: right;
+    color: #bdbdbd;
+    text-decoration: none;
+    font-size: 16px;
+    margin-top: 2px;
+}
+
+
+.fa-window-minimize:hover {
+    float: right;
+    color: #a1a1a1;
+    text-decoration: none;
+    font-size: 16px;
+    margin-top: 2px;
+}
+
+.fa-plus {
+    float: right;
+    color: #bdbdbd;
+    text-decoration: none;
+    font-size: 17px;
+    margin-top: 5px;
+}
+
+.fa-plus:hover {
+    float: right;
+    color: #a1a1a1;
+    text-decoration: none;
+    font-size: 17px;
+    margin-top: 5px;
+}
+
+a {
+    color: inherit;
+}
+
