--- a/Resomar/WebContent/View/home/home.html
+++ b/Resomar/WebContent/View/home/home.html
@@ -1,15 +1,17 @@
 <link rel="stylesheet" href="View/home/home.css"/>
 <div class="dashboard">
     <div class="card fast-acess bg-light" style="max-width: 73rem;">
-        <h4 class="card-header">Acesso Rápido</h4>
-        <div class="card-body row">
+        <h4 class="card-header" >Acesso Rápido
+        <a title="Minimizar"><i ng-class="{'fas fa-plus':!showAccess, 'fas fa-window-minimize':showAccess}"  ng-init="showAccess = true" ng-click="showAccess = !showAccess"></i></a>
+        </h4>
+        <div ng-show="showAccess" class="card-body row">
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
                         <span>Clínicas</span><i class="fas fa-hospital icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#" title="Cadastrar Clínicas" class="fa fa-plus-circle"></a>
+                        <a style="text-decoration:none;" href="#/clinic" title="Cadastrar Clínicas" class="fa fa-plus-circle"></a>
                     </div>
                 </div>
             </div>
@@ -19,7 +21,7 @@
                         <span>Doações</span><i class="fas fa-donate icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#" title="Cadastrar Doações" class="fa fa-plus-circle"></a>
+                        <a style="text-decoration:none;" href="#/donate" title="Cadastrar Doações" class="fa fa-plus-circle"></a>
                     </div>
                 </div>
             </div>
@@ -29,7 +31,7 @@
                         <span>Especialidades</span><i class="fas fa-graduation-cap icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#" title="Cadastrar Especialidades" class="fa fa-plus-circle"></a>
+                        <a style="text-decoration:none;" href="#/specialty" title="Cadastrar Especialidades" class="fa fa-plus-circle"></a>
                     </div>
                 </div>
             </div>
@@ -39,7 +41,7 @@
                         <span>Instituições</span><i class="fas fa-building icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#" title="Cadastrar Instituições" class="fa fa-plus-circle"></a>
+                        <a style="text-decoration:none;" href="#/institution" title="Cadastrar Instituições" class="fa fa-plus-circle"></a>
                     </div>
                 </div>
             </div>
@@ -49,7 +51,7 @@
                         <span>Médicos</span><i class="fas fa-user-md icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#" title="Cadastrar Médicos" class="fa fa-plus-circle"></a>
+                        <a style="text-decoration:none;" href="#/medic" title="Cadastrar Médicos" class="fa fa-plus-circle"></a>
                     </div>
                 </div>
             </div>
@@ -59,7 +61,7 @@
                         <span>Necessidades</span> <i class="fas fa-hands icon-dash"></i>
                         <hr>
                         <span class="quantity">10</span>
-                        <a style="text-decoration:none;" href="#" title="Cadastrar Necessidades" class="fa fa-plus-circle"></a>
+                        <a style="text-decoration:none;" href="#/needs" title="Cadastrar Necessidades" class="fa fa-plus-circle"></a>
                     </div>
                 </div>
             </div>
@@ -67,8 +69,10 @@
     </div>
     <p>
     <div class="card fast-acess-grafic bg-light mb-3 row" style="max-width: 73rem;">
-        <h4 class="card-header ">Informações</h4>
-        <div class="card-deck">
+        <h4 class="card-header ">Informações
+        <a title="Minimizar"><i ng-class="{'fas fa-plus':!showInf, 'fas fa-window-minimize':showInf}"  ng-init="showInf = true" ng-click="showInf = !showInf"></i></a>
+        </h4>
+        <div ng-show="showInf" class="card-deck">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Gráfico 1</h5>
