--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -25,7 +25,7 @@
                             </a>
                         <li class="sidebar-dropdown" ng-init="showCadastro = false"
                             ng-click="showCadastro = !showCadastro">
-                            <a href="#">
+                            <a class="register">
                                 <i class="fas fa-plus-square"></i>
                                 <span class="item-menu">Cadastros</span>
                                 <i ng-class="{'fas fa-angle-down':!showCadastro, 'fas fa-angle-up':showCadastro}"></i>
