--- a/Resomar/WebContent/View/specialty/specialty.css
+++ b/Resomar/WebContent/View/specialty/specialty.css
@@ -21,6 +21,7 @@
 
 .buttons {
     margin-top: 20px;
+    text-align: right;
 }
 
 .btn-cancel {
@@ -102,16 +103,15 @@ a {
     margin-top: 20px;
 }
 
-.fa-edit {
-    font-size: 18px;
+.fa-pencil-alt {
+    font-size: 13px;
     color: white;
 }
 
 .fa-trash-alt {
-    font-size: 18px;
+    font-size: 13px;
     color: white;
 }
-
 
 .icons {
     float: right;
