--- a/Resomar/WebContent/View/login/login.css
+++ b/Resomar/WebContent/View/login/login.css
@@ -116,6 +116,7 @@ color: white;
 body {
 	background: linear-gradient(to bottom, #1E3B2F, #85793C) !important;
 	background-repeat: no-repeat !important;
+	height: 753px !important;
 }
 
 .d-block {
@@ -124,4 +125,22 @@ body {
 
 .invalid {
 	border-color: red;
+}
+
+.btn-cancel {
+	background: #85793C;
+	color: white;
+}
+
+.btn-save {
+	background: #1E3B2F;
+	color: white;
+}
+
+.btn-cancel:hover {
+	background: #695f2f;
+}
+
+.btn-save:hover {
+	background: #162b22;
 }
