--- a/Resomar/WebContent/View/user/user.html
+++ b/Resomar/WebContent/View/user/user.html
@@ -1,1 +1,78 @@
-<link rel="stylesheet" href="View/user/user.css"/>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <link rel="stylesheet" href="View/login/login.css"/>
+</head>
+<body>
+<div class="login-block">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 login-sec">
+                <h2 class="text-center">Cadastro de Usuário</h2>
+                <form class="user-form" name="formUserRegister">
+                    <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                        <input class="form-control" placeholder="Nome">
+                    </label>
+                    <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                        <input class="form-control" placeholder="Sobrenome">
+                    </label>
+                    <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                        <input class="form-control" placeholder="Email">
+                    </label>
+                    <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                        <input class="form-control" placeholder="Senha">
+                    </label>
+                    <label class="col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                        <input class="form-control" placeholder="Confirmar Senha">
+                    </label>
+                    <div class="radio-set col-sm-12 col-lg-12 col-xl-12 col-md-12">
+                        <!-- Material inline 1 -->
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" id="materialInline1"
+                                   name="inlineMaterialRadiosExample">
+                            <label class="form-check-label" for="materialInline1">Administrador</label>
+                        </div>
+
+                        <!-- Material inline 2 -->
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" id="materialInline2"
+                                   name="inlineMaterialRadiosExample">
+                            <label class="form-check-label" for="materialInline2">Médico</label>
+                        </div>
+
+                        <!-- Material inline 3 -->
+                        <div class="form-check form-check-inline">
+                            <input type="radio" class="form-check-input" id="materialInline3"
+                                   name="inlineMaterialRadiosExample">
+                            <label class="form-check-label" for="materialInline3">ONG</label>
+                        </div>
+                    </div>
+                    <div class="buttons col-md-12" style="text-align:right;margin-top: 10px">
+                        <input type="button" class="btn btn-cancel" value="Cancelar">
+                        <input type="button" class="btn btn-save" value="Cadastrar">
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-8 banner-sec">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="assets/images/background-login.jpg" alt="First slide">
+                            <div class="banner-text">
+                                <h2>Projeto ReSOMAR</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+</html>
