--- a/Resomar/WebContent/View/specialist/specialist.html
+++ b/Resomar/WebContent/View/specialist/specialist.html
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="View/medic/medic.css"/>
+<link rel="stylesheet" href="View/specialist/specialist.css"/>
 <div class="medic-register">
     <div class="card fast-acess bg-light">
-        <h4 class="card-header">Cadastro de Médico
+        <h4 class="card-header">Cadastro de Especialista
             <a href="#" title="Minimizar"><i class="fas fa-window-minimize"></i></a>
         </h4>
         <form class="medic-form">
