--- a/Resomar/WebContent/templates/menu/menu.html
+++ b/Resomar/WebContent/templates/menu/menu.html
@@ -58,9 +58,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#/medic">
+                                    <a href="#/specialist">
                                         <i class="fas fa-user-md"></i>
-                                        <span class="item-menu">Médicos</span>
+                                        <span class="item-menu">Especialista</span>
                                     </a>
                                 </li>
                                 <li>
