--- a/Resomar/WebContent/View/specialty/specialty.html
+++ b/Resomar/WebContent/View/specialty/specialty.html
@@ -13,11 +13,12 @@
 
                 <div class="col-md-4">
                     <label ng-if="formSpeciality.speciality.$valid">Especialidade</label>
-                    <input class="form-control input"  name="speciality" placeholder="Especialidade" ng-model="specialityCtrl.speciality">
+                    <input class="form-control input"  name="speciality" placeholder="Especialidade" focus="true"
+                           ng-class="{'invalid':formSpeciality.speciality.$invalid && formSpeciality.speciality.$touched}" ng-model="specialityCtrl.speciality" required>
                 </div>
                 <div class="buttons col-md-12">
                     <input type="button" class="btn btn-cancel" value="Cancelar">
-                    <input type="button" class="btn btn-save" value="Cadastrar">
+                    <input type="button" class="btn btn-save" ng-click="specialityCtrl.validateSpeciality();" value="Cadastrar">
                 </div>
             </div>
         </form>
@@ -36,7 +37,7 @@
         <th scope="row">1</th>
         <td>Dentista</td>
         <td class="icons">
-            <a class="btn btn-sm button-edit "><i class="fas fa-pencil-alt"></i></a>
+            <a class="btn btn-sm button-edit " ng-click="specialityCtrl.open();" ><i class="fas fa-pencil-alt"></i></a>
             <a class="btn btn-sm button-trash"><i class="fas fa-trash-alt"></i></a>
         </td>
     </tr>
