--- a/Resomar/WebContent/View/specialty/specialty.html
+++ b/Resomar/WebContent/View/specialty/specialty.html
@@ -7,7 +7,7 @@
                                     ng-init="showAccess = true" ng-click="showAccess = !showAccess"
                                     class="fas fa-window-minimize"></i></a>
         </h4>
-        <form ng-show="showAccess" name="formSpeciality" ng-class="{'animated zoomOut': !showAccess, 'animated zoomIn':showAccess}"
+        <form ng-show="showAccess" name="formSpeciality"
               class="specialty-form">
             <div class="row">
 
@@ -37,7 +37,7 @@
         <th scope="row">1</th>
         <td>Dentista</td>
         <td class="icons">
-            <a class="btn btn-sm button-edit " ng-click="specialityCtrl.open();" ><i class="fas fa-pencil-alt"></i></a>
+            <a class="btn btn-sm button-edit " ng-click="specialityCtrl.openModal('lg');" ><i class="fas fa-pencil-alt"></i></a>
             <a class="btn btn-sm button-trash"><i class="fas fa-trash-alt"></i></a>
         </td>
     </tr>
